# ctf-ai-system

./: .env.example  .gitignore  CTF_SOLVER_GUIDE.md  README.md  README_CTF_AGENT.md  api_client_example.py  check_target.py  ctf_request_get.txt  fast_submit_interactive.py  pyproject.toml  quick_submit.py  request_example.txt  requirements.txt  solve_ctf.py  solve_ctf_aggressive.py  solve_ctf_comprehensive.py  solve_ctf_enhanced.py  solve_ctf_final.py  start_ctf_agent.py  submit_fast.bat  submit_url.py  test_flag_detection.py  test_system_integration.py
config/: development.yaml
docs/: current_progress_analysis.md  kali_checklist.md  kali_ctf_solving_guide.md  kali_deployment.md  kali_fix_guide.md  kali_mcp_installation.md  kali_python_fix.md  kali_test_success_summary.md  kali_testing_guide.md  mcp_server_usage.md  next_tasks_plan.md  project_progress_report.md  project_progress_summary.md  quick_kali_fix.md
nmap_results/: nmap_scan.txt
reports/: attack_report_SQL注入挑战_20260303_164658.html  attack_report_SQL注入挑战_20260303_164658.json  attack_report_SQL注入挑战_20260303_164658.markdown  attack_report_SQL注入挑战_20260303_164658.text  ctf_solve_http_e579ae13-2404-401e-ac7b-17d68115f1a9.node5.buuoj.cn_81_20260305_195815.json
scripts/: check_project_status.py  demo_all_components.py  demo_core_features.py  demo_mcp_server.py  fix_dependencies.py  fix_tool_chain.py  kali_fix_tool_chain.py  kali_quick_start.sh  run_kali_tests.sh  setup_kali_venv.sh  start_mcp_server.py  test_integration.py  test_kali_preparedness.py  test_mcp_server.py  test_react_agent.py  test_tools_directly.py  test_url_parsing.py  transfer_to_kali.bat  transfer_to_kali.sh  validate_config.py  verify_kali_environment.py
sqlmap_results/: sqlmap_scan.txt
src/agents/: attack_executor.py  react_agent.py  report_generator.py
src/agents/prompts/: analysis_prompt.txt  planning_prompt.txt
src/api/: server.py
src/core/: attack_engine.py
src/mcp_server/: __init__.py  server.py
src/mcp_server/tools/: __init__.py  nmap_wrapper.py  sqlmap_wrapper.py  universal_password_injector.py
src/utils/: config_manager.py  deepseek_client.py  logger.py  tool_coordinator.py  tool_parser.py
